# httpd

./: .gitignore  CMakeLists.txt  Makefile  README.md  common.c  common.h  common.mk  config-file.c  config-file.h  http.c  http.h  makefile  server-common.c  server-common.h  server-forked  server-select  server-single  settings.config  sockets.c  sockets.h  utilities.c  utilities.h
include/: common.h  config-file.h  http.h  list.h  server-common.h  sockets.h
include/server-forked/: childpid.h
server-forked/: main.c
server-select/: main.c
server-single/: main.c
server-threaded/: main.c
slow-gethttp/: main.c
src/: common.c  config-file.c  http.c  list.c  main.c  server-common.c  sockets.c
src/server-forked/: childpid.c  childpid.h  main.c
src/server-select/: main.c
src/server-single/: main.c
src/server-threaded/: main.c
test/: index.html
